# hf-store-rs

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
adr/: 0001-hub-transport-and-cache-boundary.md  0002-cache-identity-and-format.md  0003-cache-publication-and-coordination.md  0004-transport-runtime-tls-and-features.md  0005-repository-filter-grammar.md  0006-local-directory-reconciliation-and-completion.md  0007-cache-garbage-collection.md  0008-command-line-interface.md  0009-library-first-integration.md  README.md
conformance/python/: README.md  cache_conformance.py  compatible_writer_race.py  portable_fixture_comparison.py  rust_writer_conformance.py  test_cache_conformance.py  test_compatible_writer_race.py  test_portable_fixture_comparison.py
crates/hf-store/: Cargo.toml
crates/hf-store-cli/: Cargo.toml
crates/hf-store-cli/src/: cli.rs  config.rs  main.rs  output.rs
crates/hf-store-cli/tests/: cli.rs
crates/hf-store/examples/: download.rs  local_dir.rs  offline.rs
crates/hf-store/src/: api.rs  auth.rs  cancellation.rs  endpoint.rs  error.rs  fetch_plan.rs  gc.rs  hub_protocol.rs  lib.rs  progress.rs  repo.rs  repo_path.rs  report.rs  reqwest_transport.rs  revision.rs  snapshot.rs  test_http_fixture.rs  transfer.rs  transport.rs  validation.rs
crates/hf-store/src/cache/: acquisition.rs  compatible_cache.rs  filter.rs  hub_cache.rs  hub_layout.rs  hub_metadata.rs  key.rs  layout.rs  local_dir_bookkeeping.rs  local_dir_completion.rs  local_dir_layout.rs  local_dir_materialization.rs  local_dir_reconciliation.rs  metadata.rs  mod.rs  publication.rs  python_cache_conformance.rs  python_writer_race.rs  rooted_fs.rs  sanitized_io.rs  standard_cache.rs  transfer_engine.rs
crates/hf-store/tests/: endpoint_and_auth.rs  library_consumer.rs  repo_path.rs  repository_identity.rs  repository_kind.rs  revision_identity.rs  standard_cache_fixtures.rs
crates/hf-store/tests/fixtures/huggingface_hub-v1.24.0/: README.md  generate.py  inventory.json  local-dir-download.metadata  local-dir-inventory.json  provenance.json  tree-v1.json
crates/hf-store/tests/fixtures/huggingface_hub-v1.24.0/cache/models--fixture-model/snapshots/1111111111111111111111111111111111111111/: config.json
crates/hf-store/tests/fixtures/huggingface_hub-v1.24.0/local-dir/.cache/huggingface/download/config/: fixture.json.metadata
crates/hf-store/tests/fixtures/huggingface_hub-v1.24.0/local-dir/.cache/huggingface/download/weights/nested/: model.safetensors.metadata
crates/hf-store/tests/fixtures/huggingface_hub-v1.24.0/local-dir/config/: fixture.json
crates/hf-store/tests/fixtures/huggingface_hub-v1.24.0/local-dir/weights/nested/: model.safetensors
docs/: cache-and-offline.md  implementation-handoff.md  platform-capabilities.md  release-policy.md  security-review-v0.1.md  usage.md
rfcs/: 0001-hub-store-v0.1.md  README.md
