[workspace]
members = ["crates/hf-store"]
resolver = "3"

[workspace.package]
version = "0.0.0"
authors = ["DinoML contributors"]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/dinoml/hf-store-rs"

[workspace.dependencies]
cap-fs-ext = "4.0.2"
cap-std = "4.0.2"
fs4 = "1"
getrandom = { version = "0.3", features = ["std"] }
reqwest = { version = "=0.13.4", default-features = false, features = ["http2", "rustls", "stream"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
unicode-normalization = "0.1"
unicode-casefold = "0.2"
url = "2.5"
zeroize = "1.8"
tempfile = "3"
tokio = { version = "1", default-features = false, features = ["rt", "sync", "time"] }

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "warn"
unreachable_pub = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
semicolon_outside_block = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"
