[package]
name = "hf-store-cli"
description = "Command-line adapter for the hf-store Hugging Face Hub cache library"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "hf-store"
path = "src/main.rs"
doc = false

[dependencies]
clap.workspace = true
cap-fs-ext.workspace = true
cap-std.workspace = true
hf-store = { path = "../hf-store" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
