[package]
name = "hf-store"
description = "Rust-native Hugging Face Hub repository storage and cache primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["cache", "huggingface", "machine-learning", "storage"]
categories = ["caching", "web-programming::http-client"]
publish = false

[dependencies]
cap-fs-ext.workspace = true
cap-std.workspace = true
fs4.workspace = true
getrandom.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
unicode-normalization.workspace = true
unicode-casefold.workspace = true
url.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
